--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             font-family: Arial, sans-serif;
             text-align: center;
             padding: 20px;
+            padding-bottom: 150px; /* Extra space for the keyboard */
         }
         input, textarea {
             width: 90%;
@@ -43,10 +44,6 @@
     <button onclick="submitForm()">Submit</button>
 
     <script>
-        document.addEventListener("DOMContentLoaded", function () {
-        Telegram.WebApp.expand();
-        });
-        
         function submitForm() {
             const data = {
                 owner_name: document.getElementById("owner_name").value,
