--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             font-family: Arial, sans-serif;
             text-align: center;
             padding: 20px;
+            padding-bottom: 200px; /* Creates extra space */
         }
         input, textarea {
             width: 90%;
@@ -17,6 +18,7 @@
             margin: 10px 0;
             font-size: 16px;
         }
+
         button {
             background-color: #0088cc;
             color: white;
@@ -24,6 +26,10 @@
             border: none;
             cursor: pointer;
             font-size: 18px;
+            position: fixed;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
         }
     </style>
 </head>
