--- a/index.html
+++ b/index.html
@@ -49,30 +49,51 @@
     <button onclick="submitForm()">Submit</button>
 
     <script>
-        document.addEventListener("DOMContentLoaded", function () {
-             Telegram.WebApp.expand();  // Force full-screen WebView
-        });
+    document.addEventListener("DOMContentLoaded", function () {
+        Telegram.WebApp.expand(); // Expands full screen
+    });
 
-        function submitForm() {
-            const data = {
-                owner_name: document.getElementById("owner_name").value,
-                owner_phone: document.getElementById("owner_phone").value,
-                city: document.getElementById("city").value,
-                street: document.getElementById("street").value,
-                building: document.getElementById("building").value,
-                area: document.getElementById("area").value,
-                price: document.getElementById("price").value,
-                description: document.getElementById("description").value
-            };
+    function submitForm() {
+        const data = {
+            owner_name: document.getElementById("owner_name").value,
+            owner_phone: document.getElementById("owner_phone").value,
+            city: document.getElementById("city").value,
+            street: document.getElementById("street").value,
+            building: document.getElementById("building").value,
+            area: document.getElementById("area").value,
+            price: document.getElementById("price").value,
+            description: document.getElementById("description").value
+        };
 
-            window.Telegram.WebApp.sendData(JSON.stringify(data));
-            window.Telegram.WebApp.close(); // Closes the Web App after submission
+        window.Telegram.WebApp.sendData(JSON.stringify(data));
+        window.Telegram.WebApp.close(); // Closes the Web App after submission
+    }
+
+    // Adjust button when keyboard opens
+    window.addEventListener("resize", function () {
+        let button = document.querySelector("button");
+        if (window.innerHeight < 600) {  // Detect keyboard open
+            button.style.position = "absolute";
+            button.style.bottom = "10px";
+        } else {
+            button.style.position = "fixed";
+            button.style.bottom = "20px";
         }
+    });
 
-        // Initialize Telegram Web App settings
-        Telegram.WebApp.ready();
-        Telegram.WebApp.expand();
-    </script>
+    // Prevent button from hiding behind keyboard
+    document.querySelectorAll("input, textarea").forEach(element => {
+        element.addEventListener("focus", function () {
+            document.body.style.paddingBottom = "250px"; // Push content up
+        });
+        element.addEventListener("blur", function () {
+            document.body.style.paddingBottom = "200px"; // Reset padding
+        });
+    });
+
+    // Initialize Telegram Web App settings
+    Telegram.WebApp.ready();
+</script>
 
 </body>
 </html>
