--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
             font-family: Arial, sans-serif;
             text-align: center;
             padding: 20px;
-            padding-bottom: 200px; /* Creates extra space */
+            padding-bottom: 150px; /* Extra space */
         }
+
         input, textarea {
             width: 90%;
             padding: 10px;
@@ -30,6 +31,7 @@
             bottom: 20px;
             left: 50%;
             transform: translateX(-50%);
+            transition: bottom 0.2s ease-in-out;
         }
     </style>
 </head>
@@ -46,54 +48,55 @@
     <input type="number" id="price" placeholder="Price (EURO)">
     <textarea id="description" placeholder="Description"></textarea>
 
-    <button onclick="submitForm()">Submit</button>
+    <button id="submitBtn" onclick="submitForm()">Submit</button>
 
     <script>
-    document.addEventListener("DOMContentLoaded", function () {
-        Telegram.WebApp.expand(); // Expands full screen
-    });
+        document.addEventListener("DOMContentLoaded", function () {
+            Telegram.WebApp.expand();  // Force full-screen WebView
+        });
 
-    function submitForm() {
-        const data = {
-            owner_name: document.getElementById("owner_name").value,
-            owner_phone: document.getElementById("owner_phone").value,
-            city: document.getElementById("city").value,
-            street: document.getElementById("street").value,
-            building: document.getElementById("building").value,
-            area: document.getElementById("area").value,
-            price: document.getElementById("price").value,
-            description: document.getElementById("description").value
-        };
+        function submitForm() {
+            const data = {
+                owner_name: document.getElementById("owner_name").value,
+                owner_phone: document.getElementById("owner_phone").value,
+                city: document.getElementById("city").value,
+                street: document.getElementById("street").value,
+                building: document.getElementById("building").value,
+                area: document.getElementById("area").value,
+                price: document.getElementById("price").value,
+                description: document.getElementById("description").value
+            };
 
-        window.Telegram.WebApp.sendData(JSON.stringify(data));
-        window.Telegram.WebApp.close(); // Closes the Web App after submission
-    }
-
-    // Adjust button when keyboard opens
-    window.addEventListener("resize", function () {
-        let button = document.querySelector("button");
-        if (window.innerHeight < 600) {  // Detect keyboard open
-            button.style.position = "absolute";
-            button.style.bottom = "10px";
-        } else {
-            button.style.position = "fixed";
-            button.style.bottom = "20px";
+            window.Telegram.WebApp.sendData(JSON.stringify(data));
+            window.Telegram.WebApp.close(); // Closes the Web App after submission
         }
-    });
 
-    // Prevent button from hiding behind keyboard
-    document.querySelectorAll("input, textarea").forEach(element => {
-        element.addEventListener("focus", function () {
-            document.body.style.paddingBottom = "250px"; // Push content up
-        });
-        element.addEventListener("blur", function () {
-            document.body.style.paddingBottom = "200px"; // Reset padding
-        });
-    });
+        // Fix: Detect Mobile Keyboard Open and Move Button
+        let initialHeight = window.innerHeight;
+        window.addEventListener("resize", function () {
+            let currentHeight = window.innerHeight;
+            let button = document.getElementById("submitBtn");
 
-    // Initialize Telegram Web App settings
-    Telegram.WebApp.ready();
-</script>
+            if (currentHeight < initialHeight) {  // Keyboard Open
+                button.style.bottom = "80px"; // Move button up
+            } else {  // Keyboard Closed
+                button.style.bottom = "20px"; // Reset button position
+            }
+        });
+
+        // Extra Fix: Add More Space When Input is Focused
+        document.querySelectorAll("input, textarea").forEach(element => {
+            element.addEventListener("focus", function () {
+                document.body.style.paddingBottom = "250px"; // Push content up
+            });
+            element.addEventListener("blur", function () {
+                document.body.style.paddingBottom = "150px"; // Reset padding
+            });
+        });
+
+        // Initialize Telegram Web App settings
+        Telegram.WebApp.ready();
+    </script>
 
 </body>
 </html>
