--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
             font-family: Arial, sans-serif;
             text-align: center;
             padding: 20px;
-            padding-bottom: 150px; /* Extra space to avoid overlaps */
+            padding-bottom: 100px; /* Initial padding */
+            margin: 0;
+            overflow: hidden; /* Prevent unwanted scrolling */
         }
 
         input, textarea {
@@ -28,7 +30,7 @@
             cursor: pointer;
             font-size: 18px;
             position: fixed;
-            bottom: env(safe-area-inset-bottom, 20px);
+            bottom: 20px;
             left: 50%;
             transform: translateX(-50%);
             width: 90%;
@@ -55,7 +57,7 @@
 
     <script>
         document.addEventListener("DOMContentLoaded", function () {
-            Telegram.WebApp.expand(); // Ensure full WebApp expansion
+            Telegram.WebApp.expand(); // Expand the WebView to full height
         });
 
         function submitForm() {
@@ -74,29 +76,36 @@
             window.Telegram.WebApp.close(); // Closes the Web App after submission
         }
 
-        // Detect if the keyboard is open and move the button accordingly
-        function adjustButtonPosition() {
+        // Detect keyboard and adjust button position
+        function adjustButtonForKeyboard() {
             let button = document.getElementById("submitBtn");
-            if (window.innerHeight < 600) {  // If the height shrinks, assume keyboard is open
-                button.style.bottom = "100px"; // Move button above the keyboard
+            let windowHeight = window.innerHeight;
+            let documentHeight = document.documentElement.clientHeight;
+
+            if (windowHeight < documentHeight) {  // If the screen height shrinks, assume keyboard is open
+                button.style.bottom = "120px"; // Move button above the keyboard
             } else {
-                button.style.bottom = "env(safe-area-inset-bottom, 20px)"; // Default position
+                button.style.bottom = "20px"; // Reset button position
             }
         }
 
-        window.addEventListener("resize", adjustButtonPosition);
+        window.addEventListener("resize", adjustButtonForKeyboard);
 
-        // Extra Fix: Ensure enough space when focusing input
+        // Prevent content from being hidden under the keyboard
         document.querySelectorAll("input, textarea").forEach(element => {
             element.addEventListener("focus", function () {
-                document.body.style.paddingBottom = "250px"; // Push content up
+                document.body.style.paddingBottom = "300px"; // Push content up when typing
             });
             element.addEventListener("blur", function () {
-                document.body.style.paddingBottom = "150px"; // Reset padding
+                document.body.style.paddingBottom = "100px"; // Reset padding when typing stops
             });
         });
 
+        // Force the WebApp to expand and prevent shrinking
         Telegram.WebApp.ready();
+        setTimeout(() => {
+            Telegram.WebApp.expand();
+        }, 500);
     </script>
 
 </body>
