--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 </head>
 <body>
 
-    <h2>🏠 Add new object</h2>
-    
+    <h2>🏠 Add Your Apartment</h2>
+
     <input type="text" id="owner_name" placeholder="Owner's name">
     <input type="text" id="owner_phone" placeholder="Owner's phone">
     <input type="text" id="city" placeholder="City">
@@ -60,7 +60,6 @@
     <script>
         function submitForm() {
             const data = {
-                type: document.getElementById("type").value,
                 owner_name: document.getElementById("owner_name").value,
                 owner_phone: document.getElementById("owner_phone").value,
                 city: document.getElementById("city").value,
