--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
 
     <h2>🏠 Add Your Apartment</h2>
 
+     <select id="type">
+        <option value="" disabled selected>Select Type</option>
+        <option value="rent">Rent</option>
+        <option value="sale">Sale</option>
+    </select>
     <input type="text" id="owner_name" placeholder="Owner's name">
     <input type="text" id="owner_phone" placeholder="Owner's phone">
     <input type="text" id="city" placeholder="City">
@@ -60,6 +65,7 @@
     <script>
         function submitForm() {
             const data = {
+                type: document.getElementById("type").value,
                 owner_name: document.getElementById("owner_name").value,
                 owner_phone: document.getElementById("owner_phone").value,
                 city: document.getElementById("city").value,
