--- a/index.html
+++ b/index.html
@@ -76,8 +76,11 @@
                 description: document.getElementById("description").value
             };
 
-            window.Telegram.WebApp.sendData(JSON.stringify(data));
-            window.Telegram.WebApp.close(); // Closes the Web App after submission
+            console.log("Sending WebApp data:", JSON.stringify(data));  // Debugging
+            Telegram.WebApp.sendData(JSON.stringify(data));  // Send data to bot
+            setTimeout(() => Telegram.WebApp.close(), 500);  // Delay closing for debugging
+            // window.Telegram.WebApp.sendData(JSON.stringify(data));
+            // window.Telegram.WebApp.close(); // Closes the Web App after submission
         }
 
         // Adjust button when keyboard appears
