--- a/index.html
+++ b/index.html
@@ -76,11 +76,14 @@
                 description: document.getElementById("description").value
             };
 
-            console.log("Sending WebApp data:", JSON.stringify(data));  // Debugging
+            console.log("✅ Sending WebApp Data:", JSON.stringify(data));
+            // Debug: Capture Telegram WebApp event before sending
+            Telegram.WebApp.onEvent("web_app_data_send", function () {
+            console.log("📡 WebApp Data Sent Event Triggered!");
+            });
+
             Telegram.WebApp.sendData(JSON.stringify(data));  // Send data to bot
             setTimeout(() => Telegram.WebApp.close(), 500);  // Delay closing for debugging
-            // window.Telegram.WebApp.sendData(JSON.stringify(data));
-            // window.Telegram.WebApp.close(); // Closes the Web App after submission
         }
 
         // Adjust button when keyboard appears
