--- a/index.html
+++ b/index.html
@@ -64,16 +64,20 @@
 
     <script>
         document.addEventListener("DOMContentLoaded", function () {
-            Telegram.WebApp.expand();  // Ensures full-screen mode
-
-            // ✅ Debugging: Check if Telegram WebApp is initialized
             console.log("✅ Telegram WebApp Initialized");
 
-            // ✅ Debugging: Listen for WebApp events
+            // Force WebApp to be fully ready
+            setTimeout(() => {
+                Telegram.WebApp.ready();
+                console.log("🔄 Calling Telegram.WebApp.ready()");
+            }, 500);
+
+            // Debug: Check if WebApp is really ready
             Telegram.WebApp.onEvent("web_app_ready", function () {
                 console.log("✅ Telegram WebApp is ready.");
             });
 
+            // Debug: Listen for `web_app_data_send`
             Telegram.WebApp.onEvent("web_app_data_send", function () {
                 console.log("📡 WebApp Data Sent Event Triggered!");
             });
@@ -82,25 +86,19 @@
         function submitForm() {
             const data = {
                 owner_name: document.getElementById("owner_name").value,
-                owner_phone: document.getElementById("owner_phone").value,
-                city: document.getElementById("city").value,
-                street: document.getElementById("street").value,
-                building: document.getElementById("building").value,
-                area: document.getElementById("area").value,
-                price: document.getElementById("price").value,
-                description: document.getElementById("description").value
+                owner_phone: document.getElementById("owner_phone").value
             };
 
             console.log("✅ Sending WebApp Data:", JSON.stringify(data));
 
             try {
-                Telegram.WebApp.sendData(JSON.stringify(data));  // Send data to bot
+                Telegram.WebApp.sendData(JSON.stringify(data));
                 console.log("📡 `sendData()` executed successfully.");
             } catch (error) {
                 console.error("❌ `sendData()` failed:", error);
             }
 
-            setTimeout(() => Telegram.WebApp.close(), 500);  // Delay closing for debugging
+            setTimeout(() => Telegram.WebApp.close(), 500);
         }
     </script>
 
