--- a/index.html
+++ b/index.html
@@ -37,11 +37,14 @@
         .spacer {
             height: 300px; /* Extra space for better scrolling */
         }
+        .heading {
+         color: #1e331e; /* Change to any color you want */
+        }
     </style>
 </head>
 <body>
 
-    <h2>🏠 Add Your Apartment</h2>
+    <h2 class="heading">🏠 Add Your Apartment</h2>
 
     <label for="type_of_deal">Type of Deal:</label>
     <select id="type_of_deal">
