--- a/index.html
+++ b/index.html
@@ -40,26 +40,17 @@
         .heading {
             color: #1e3321;
         }
-        .label-style {
-            color: #1e3321; /* Change to any color you want */
-        }
     </style>
 </head>
 <body>
 
-    <h2 class="heading">🏠 Add new Object</h2>
+    <h2 class="heading">🏠 Add Object</h2>
 
-    <label for="type_of_deal" class="label-style>Type of Deal:</label>
+    <label for="type_of_deal" >Type of Deal:</label>
     <select id="type_of_deal">
         <option value="" disabled selected>Select Type</option>
         <option value="rent">Rent</option>
         <option value="sale">Sale</option>
-    </select>
-    <label for="tax" id="taxLabel" class="label-style" style="display: none;">Tax:</label>
-    <select id="tax">
-        <option value="" disabled selected>Select Tax</option>
-        <option value="included">Included</option>
-        <option value="excluded">Excluded</option>
     </select>
     <select id="type_of_object">
         <option value="" disabled selected>Select Type</option>
@@ -75,6 +66,12 @@
     <input type="number" id="total_floors" placeholder="Number of floors">
     <input type="number" id="area" placeholder="Area (m2)">
     <input type="number" id="price" placeholder="Price (EURO)">
+    <label for="tax" id="taxLabel" style="display: none;">Tax:</label>
+    <select id="tax">
+        <option value="" disabled selected>Select Tax</option>
+        <option value="included">Included</option>
+        <option value="excluded">Excluded</option>
+    </select>
     <textarea id="description" placeholder="Description"></textarea>
 
     <button id="submitBtn" onclick="submitForm()">Submit</button>
